# takusen

./: Bird2Hs.hs  Main.lhs  README.txt  Setup-114.hs  Setup-1162.hs  Setup.hs  SetupAux.hs  Takusen.cabal  takusen.cabal
Control/Exception/: MonadIO.hs
Data/Types/: ReifyReflect.lhs
Data/Types/Test/: ReifyReflect.hs
Database/: Enumerator.lhs  InternalEnumerator.lhs  Util.lhs
Database/MSSqlServer/: MSSqlFunctions.lhs
Database/MSSqlServer/Test/: Enumerator.lhs  MSSqlFunctions.lhs
Database/ODBC/: Enumerator.lhs  OdbcFunctions.hsc
Database/ODBC/Test/: Enumerator.lhs  OdbcFunctions.lhs
Database/Oracle/: Enumerator.lhs  OCIConstants.lhs  OCIEnumerator.lhs  OCIFunctions.lhs  OCIStub.lhs
Database/Oracle/Test/: Enumerator.lhs  OCIFunctions.lhs  Performance.lhs
Database/PostgreSQL/: Enumerator.lhs  PGEnumerator.lhs  PGFunctions.lhs
Database/PostgreSQL/Test/: En1.lhs  Enumerator.lhs  PGFunctions.lhs  pgaccess.hs
Database/Sqlite/: Enumerator.lhs  SqliteEnumerator.lhs  SqliteFunctions.lhs
Database/Sqlite/Test/: Enumerator.lhs  Performance.lhs  SqliteFunctions.lhs
Database/Stub/: Enumerator.lhs  StubEnumerator.lhs
Database/Stub/Test/: Enumerator.lhs
Database/Test/: Enumerator.lhs  MultiConnect.lhs  Performance.lhs  PerformanceTest.lhs  SimpleEnumeratorTest.lhs  Util.lhs
Foreign/C/: UTF8.hs  Unicode.hs
Foreign/C/Test/: UTF8.hs
Test/: HUnit.lhs  MiniUnit.hs  MiniUnitTest.hs
Test/HUnit/: Example.hs  HUnitBase.lhs  HUnitLang.lhs  HUnitLang98.lhs  HUnitLangExc.lhs  HUnitTest98.lhs  HUnitTestBase.lhs  HUnitTestExc.lhs  HUnitText.lhs
c-src/test-libpq/: pgdatetest.c  pgldtest.c
c-src/test-odbc/: test.c
doc/html/: Control-Exception-MonadIO.html  Database-Enumerator.html  Database-InternalEnumerator.html  Database-ODBC-Enumerator.html  Database-ODBC-OdbcFunctions.html  Database-Oracle-Enumerator.html  Database-Oracle-OCIConstants.html  Database-Oracle-OCIFunctions.html  Database-Oracle-Test-Enumerator.html  Database-Oracle-Test-OCIFunctions.html  Database-PostgreSQL-Enumerator.html  Database-PostgreSQL-PGFunctions.html  Database-PostgreSQL-Test-Enumerator.html  Database-PostgreSQL-Test-PGFunctions.html  Database-Sqlite-Enumerator.html  Database-Sqlite-SqliteFunctions.html  Database-Sqlite-Test-Enumerator.html  Database-Sqlite-Test-SqliteFunctions.html  Database-Stub-Enumerator.html  Database-Stub-Test-Enumerator.html  Database-Test-Enumerator.html  Database-Test-MultiConnect.html  Database-Test-Performance.html  Database-Util.html  Foreign-C-UTF8.html  Foreign-C-Unicode.html  Main.html  Test-MiniUnit.html  Test-MiniUnitTest.html  doc-index-A.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  (+14 more)
