Name:           Takusen
Version:        0.6
License:        BSD3
License-file:   doc/license.txt
Author:         Alistair Bayley, Oleg Kiselyov
Copyright:      2003-2006, Alistair Bayley, Oleg Kiselyov
Maintainer:     alistair@abayley.org, oleg@pobox.com
Stability:      experimental
Homepage:       http://darcs.haskell.org/takusen
Package-url:    http://darcs.haskell.org/takusen
Category:       Database
Build-Depends:  base, mtl, time
Synopsis:       Database access library with left-fold interface. Supports PostgreSQL, Oracle, SQLite.
Exposed-modules:
  Database.Enumerator
  , Database.Util
  , Database.Oracle.Enumerator
  , Database.Oracle.OCIConstants
  , Database.Oracle.OCIFunctions
  , Database.PostgreSQL.Enumerator
  , Database.PostgreSQL.PGFunctions
  , Database.Sqlite.Enumerator
  , Database.Sqlite.SqliteFunctions
  , Database.Stub.Enumerator
  , Control.Exception.MonadIO
  , Foreign.C.UTF8
Other-modules:
  Database.InternalEnumerator
Ghc-Prof-Options: -prof -auto-all
