Name:           Takusen
Version:        0.7
License:        BSD3
License-file:   doc/license.txt
Author:         Alistair Bayley, Oleg Kiselyov
Copyright:      2003-2007, Alistair Bayley, Oleg Kiselyov
Maintainer:     alistair@abayley.org, oleg@pobox.com
Stability:      experimental
Homepage:       http://darcs.haskell.org/takusen
Package-url:    http://darcs.haskell.org/takusen
Category:       Database
Build-Depends:  base, mtl, time
Synopsis:       Database access library with left-fold interface. Supports PostgreSQL, Oracle, SQLite.
Exposed-modules:
    Database.Enumerator
  , Database.Util
  , Database.ODBC.Enumerator
  , Database.ODBC.OdbcFunctions
  , Database.Oracle.Enumerator
  , Database.Oracle.OCIConstants
  , Database.Oracle.OCIFunctions
  , Database.PostgreSQL.Enumerator
  , Database.PostgreSQL.PGFunctions
  , Database.Sqlite.Enumerator
  , Database.Sqlite.SqliteFunctions
  , Database.Stub.Enumerator
  , Control.Exception.MonadIO
  , Foreign.C.UTF8
Other-modules:
    Database.InternalEnumerator
--  , Database.Oracle.Test.Enumerator
--  , Database.Oracle.Test.OCIFunctions
--  , Database.PostgreSQL.Test.Enumerator
--  , Database.PostgreSQL.Test.PGFunctions
--  , Database.Sqlite.Test.Enumerator
--  , Database.Sqlite.Test.SqliteFunctions
--  , Database.Stub.Test.Enumerator
--  , Database.Test.Enumerator
--  , Database.Test.Performance
--  , Database.Test.Util
--  , Test.MiniUnit
--  , Test.MiniUnitTest
Ghc-Prof-Options: -prof -auto-all
--Ghc-Options: -O2
--Ghc-Options: -optl-Wl--enable-stdcall-fixup
Extensions: CPP
Extra-tmp-files: 
  Database/Oracle/OCIFunctions_stub.c
  Database/Oracle/OCIFunctions_stub.h
  Database/PostgreSQL/PGFunctions_stub.c
  Database/PostgreSQL/PGFunctions_stub.h
--
